# jiteval

./: CMakeLists.txt  JitEval.sln  JitEval.vcxproj  JitEval.vcxproj.filters  README.md  benchmark.c  jiteval.h  sample.c  test.c
projects/msvc/: JitEval.sln  JitEval.vcxproj  JitEval.vcxproj.filters
resources/: banner.pdn
